--- a/sale.html
+++ b/sale.html
@@ -7,6 +7,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <nav class="header_nav">
+        <a href="index.html" class="logo"><img src="images/sample_logo_k.png"></a>
+        <ul class="global_nav">
+          <a href="index.html" class="global_nav_item">
+            <li>Home</li>
+          </a>
+          <a href="#menu" class="global_nav_item">
+            <li>Menu</li>
+          </a>
+          <a href="contact.html" class="global_nav_item">
+            <li>Contact</li>
+          </a>
+        </ul>
+      </nav>
+  <body>
     <section class="section_inner">
       <div class="section_title">
         <h1>コーヒー豆販売</h1>
@@ -76,5 +92,29 @@
       </form>
     </section>
     <script type="text/javascript" src="javascripts/sale.js"></script>
+    <footer class="footer_nav">
+      <nav >
+        <ul class="footer_layout">
+          <div class="footer_moji">
+          <a href="index.html" class="footer_nav_item">
+            <li>Home</li>
+          </a>
+          <a href="#menu" class="footer_nav_item">
+            <li>Menu</li>
+          </a>
+          <a href="contact.html" class="footer_nav_item">
+            <li>Contact</li>
+          </a>
+          <a href="index.html">
+            <li>
+              <img src="images/sample_logo_w.png" class="logo">
+            </li>
+          </a>
+          </div>
+        </ul>
+      </nav>
+      <p class="footer_layout mojicolor">© DIVE INTO CODE Corp. All RIGHTS RESERVED.</p>
+    </footer>
+  </body>
   </body>
 </html>
